Add social-media links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,12 +31,16 @@ header {
 .menu a{
     font-family: 'Bebas Neue', sans-serif;
     text-decoration-line: none;
+    color: black;
     
 }
 
 /*Main content*/
 main {
     background-color: orange;
+    display: flex;
+    flex: 1 0 auto;
+
 }
 
 footer {
