Added media query for tablets and larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header {
     position: fixed;
     top: 0;
     padding-left: 4px;
+    align-items: center;
 }
 
 .menu {
@@ -60,8 +61,8 @@ nav {
 /* Hamburger placing*/
 .menu-toggle-label {
     display: flex;
-    align-items: center;
-    padding-right: 4px;
+    padding-right: 10px;
+    padding-left: 4px
 }
 
 /*Main content*/
@@ -70,7 +71,8 @@ main {
     display: flex;
     flex: 1 0 auto;
     flex-direction: column;
-    margin-top: 38px
+    margin-top: 38px;
+    width: 100%;
 
 }
 
@@ -82,9 +84,26 @@ main {
     text-align: center;
     justify-content: space-evenly;
     padding: 15px 0;
+    width: 100%;
 }
 
 #social-network i {
     font-size: 130%;
     color: rgb(214, 214, 216)
+}
+
+/* Media query: Tablets and larger 768px */
+@media screen and (min-width: 768px) {
+    nav {
+        display: block;
+        position: relative;
+    }
+
+    .menu {
+        display: flex;
+        padding-right: 100px;
+        gap: 70px;
+        justify-content: flex-end;
+        
+    }
 }
