Added the header and footer code in services.html and contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ main {
     }
 }
 
-/* Media query: Tablets and larger 992px */
+/* Media query: Laptops and larger 992px */
 @media screen and (min-width: 992px) {
      /*Changes to header */
      header {
