Style for media query tablets and laptops. Moved second header to a new section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,12 @@ main {
         padding-top: 9vw;
         padding-left: 10vw;
     }
-}
+
+    /*Changes for index images*/
+    .index-images {
+        display: flex;
+    }
+
 
 /* Media query: Laptops and larger 992px */
 @media screen and (min-width: 992px) {
