--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,43 +114,29 @@ main {
 }
 
 /*Services page*/
-.service-header {
-    text-align: center;
-    padding-top: 12px;
-    background-color: rgb(68, 68, 76);
-    color: rgb(215, 213, 213);
-    width: 100;
-    /*padding-bottom: 2px;*/
-}
-
-.service-regular {
+.service_text  {
     display: flex;
-    width: 100%;
-    padding-bottom: 20px;
+    flex-direction: column;
+    
+    width: 50%;
+    border: 4px solid black;
     
 }
-.service-invert {
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100%;
-    padding-bottom: 20px;
-}
 
-.service_img img{
+#service_image {
+    width: 50%;
     height: auto;
-    width: 100%;
+    border: 4px solid black;
 }
 
-.service_text {
-    padding: 2px;
-    width: 100;
-}
-.service_text h2 {
-    width: 45vw;
+.services {
+    display: flex;
     
 }
 
-
+#service_image img {
+    width:100%;
+}
 
 /* Footer content*/
 #social-network {
@@ -210,6 +196,20 @@ main {
     .index-images {
         display: flex;
     }
+
+    /*Changes for services page*/
+    /*.service-regular {
+        display: flex;
+        width: 100%;
+        padding-bottom: 20px;
+        justify-content: center;
+        
+        
+    }
+    .service_img img{
+        height: auto;
+        width: 60%;
+    }*/
 }
 
 /* Media query: Laptops and larger 992px */
