--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ main {
 .service_text  {
     display: flex;
     flex-direction: column;
-    
+    text-align: center;
     width: 50%;
     border: 4px solid black;
     
@@ -136,6 +136,11 @@ main {
 
 #service_image img {
     width:100%;
+}
+
+.services-reverse {
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 /* Footer content*/
