--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ main {
     flex-direction: column;
     text-align: center;
     width: 50%;
+    color:rgb(215, 213, 213);
     border: 4px solid black;
     
 }
