--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ header {
     padding-left: 4px;
     align-items: center;
     color: rgb(215, 213, 213);
+    box-shadow: 0 2px 2px black;
 }
 
 .menu {
@@ -116,6 +117,9 @@ main {
 /*Services page*/
 .service-header {
     text-align: center;
+    padding-top: 4px;
+    color: rgb(215, 213, 213);
+    background-color: rgb(90, 90, 94);
 }
 .service_text  {
     display: flex;
@@ -135,7 +139,7 @@ main {
 
 .services {
     display: flex;
-    
+    background-color: rgb(90, 90, 94);
 }
 
 #service_image img {
@@ -145,6 +149,7 @@ main {
 .services-reverse {
     display: flex;
     flex-direction: row-reverse;
+    background-color: rgb(90, 90, 94);
 }
 
 /* Footer content*/
@@ -214,6 +219,10 @@ main {
 
     .service-header {
         display: none;
+    }
+
+    .service_text {
+        font-size: 180%;
     }
 }
 
