--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,11 +71,10 @@ nav {
 main {
     background-color: rgb(90, 90, 94);
     display: flex;
+    /* to push footer down*/
     flex: 1 0 auto;
     flex-direction: column;
     margin-top: 38px;
-    width: 100%;
-
 }
 
 .hero {
@@ -149,7 +148,24 @@ main {
     flex-direction: row-reverse;
 }
 
+/*Contact page */
+
+#hero2 {
+    background: url("../images/hero.jpg") no-repeat center center/cover;
+    width: 100%;
+    height: 100vh;
+}
+
+
 /* Footer content*/
+
+/* Fixed footer for contact page*/
+.contact-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%
+}
+
 #social-network {
     background-color: rgb(68, 68, 76);
     display: flex;
