--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ main {
 
 /*Contact page */
 
-#hero2 {
+.hero2 {
     background: url("../images/hero.jpg") no-repeat center center/cover;
     width: 100%;
     height: 100vh;
