--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,8 +159,26 @@ main {
     justify-content: center;
 }
 
+.address_box {
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 100%;
+}
+
+.address_list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    padding: 6px;
+    background-color: rgb(90, 90, 94, 40%);
+    border: 1px solid black;
+    width: 100%;
+}
 .contact_box {
-    padding: 20px;
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 100%;
 }
 
 .sign-up {
@@ -168,10 +186,15 @@ main {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: rgb(90, 90, 94, 30%);
-    border: 2px solid black;
+    background-color: rgb(90, 90, 94, 40%);
+    border: 1px solid black;
+    width: 100%;
+    padding: 6px;
 }
 
+#name, #company, #email {
+    width: 100%;
+}
 .label_hidden {
     display: none;
 }
