Fix name of of class on contact us form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ main {
     width: 100%;
 }
 
-.sign-up {
+.contact-us {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -310,7 +310,7 @@ main {
         padding-top: 10%;
     }
 
-    .sign-up {
+    .contact-us {
         height: 40vh;
         width: 25vw;
         padding: 20px;
