--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,16 @@ h1, h2, h3, h4 {
 
 }
 
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(90, 90, 94);
+}
+
 /* Header content*/
 header {
     background-color: rgb(68, 68, 76);
