--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,10 @@
 }
 
 /* Use imported font for h1,h2,h3,h4 */
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-family: 'Bebas Neue', sans-serif;
 
 }
@@ -41,14 +44,18 @@ header {
 .menu {
     /*Remove the dots*/
     list-style-type: none;
-    
+
 }
 
-.menu a{
+.menu a {
     font-family: 'Bebas Neue', sans-serif;
     text-decoration-line: none;
     color: rgb(215, 213, 213);
-    
+
+}
+
+.menu a:hover {
+    color: #fafafa;
 }
 
 /*Hiding the <nav> for use of the dropdown*/
@@ -70,6 +77,7 @@ nav {
 #menu-toggle {
     display: none;
 }
+
 /* Hamburger placing*/
 .menu-toggle-label {
     display: flex;
@@ -85,6 +93,7 @@ main {
     flex: 1 0 auto;
     flex-direction: column;
     margin-top: 38px;
+    width: 100%;
 }
 
 .hero {
@@ -107,6 +116,7 @@ main {
     color: rgb(215, 213, 213);
     /*padding-bottom: 2px;*/
 }
+
 .imagebox {
     padding: 12px;
 }
@@ -115,6 +125,7 @@ main {
     color: rgb(215, 213, 213);
     text-align: center;
 }
+
 .index-images img {
     height: auto;
     width: 100%;
@@ -128,14 +139,15 @@ main {
     color: rgb(215, 213, 213);
     background-color: rgb(90, 90, 94);
 }
-.service_text  {
+
+.service_text {
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 50%;
-    color:rgb(215, 213, 213);
+    color: rgb(215, 213, 213);
     padding-top: 2%;
-    
+
 }
 
 #service_image {
@@ -149,7 +161,7 @@ main {
 }
 
 #service_image img {
-    width:100%;
+    width: 100%;
     display: block;
 }
 
@@ -168,6 +180,7 @@ main {
     flex-direction: column;
     justify-content: center;
 }
+
 /* First box , Address*/
 .address_box {
     padding-left: 15%;
@@ -202,8 +215,10 @@ main {
     padding: 6px;
 }
 
-#name, #company, #email {
-   width: 100%;
+#name,
+#company,
+#email {
+    width: 100%;
 }
 
 .contact_text {
@@ -215,7 +230,9 @@ main {
 }
 
 /* Footer content*/
-
+footer {
+    width: 100%;
+}
 /* Fixed footer for contact page*/
 .contact-footer {
     position: fixed;
@@ -240,6 +257,7 @@ main {
 
 /* Media query: Tablets and larger 768px */
 @media screen and (min-width: 768px) {
+
     /*Changes to header */
     header {
         padding-left: 12px;
@@ -248,19 +266,22 @@ main {
     #logo {
         font-size: 300%;
     }
+
     /* Blocking of navigation under header*/
     nav {
         display: block;
         position: relative;
     }
+
     /* Showing of the menu in the header*/
     .menu {
         display: flex;
         padding-right: 100px;
         gap: 70px;
         justify-content: flex-end;
-        
+
     }
+
     /*Hiding the burger*/
     .menu-toggle-label {
         display: none;
@@ -282,9 +303,10 @@ main {
     }
 
     /*Changes for services page*/
-    .services, .services-reverse {
+    .services,
+    .services-reverse {
         margin-inline: auto;
-        max-width: 600px; 
+        max-width: 600px;
     }
 
     .service-header {
@@ -327,8 +349,9 @@ main {
 
 /* Media query: Laptops and larger 992px */
 @media screen and (min-width: 992px) {
-     /*Changes to header */
-     header {
+
+    /*Changes to header */
+    header {
         padding-left: 40px;
     }
 
