--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,6 +255,10 @@ footer {
     color: rgb(215, 213, 213);
 }
 
+#social-network i:hover {
+    color: #fafafa
+}
+
 /* Media query: Tablets and larger 768px */
 @media screen and (min-width: 768px) {
 
