Add cursor pointer for submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,10 @@ main {
     padding-bottom: 4px;
 }
 
+.submit_button:hover {
+    cursor: pointer;
+}
+
 /* Footer content*/
 footer {
     width: 100%;
