Style response page for media query tablets and larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,21 @@ main {
     cursor: pointer;
 }
 
+/* Response page */
+.response_box {
+    padding: 2%;
+}
+.response_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    padding: 6px;
+    background-color: rgb(90, 90, 94, 40%);
+    border: 1px solid black;
+    color: rgb(215, 213, 213);
+}
+
 /* Footer content*/
 footer {
     width: 100%;
@@ -364,6 +379,16 @@ footer {
         height: 40vh;
         width: 25vw;
         padding: 20px;
+    }
+
+    /* Response page*/
+    .response_box {
+        padding-top: 10%;
+    }
+
+    .response_content {
+        text-align: center;
+        padding: 5%;
     }
 }
 
