--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,26 +358,30 @@ footer {
     }
 
     .address_box {
-        padding-left: 25%;
         padding-right: 2%;
         padding-top: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
     }
 
     .address_list {
         height: 40vh;
-        width: 25vw;
+        width: 250px;
         padding: 40px;
     }
 
     .contact_box {
         padding-left: 2%;
-        padding-right: 25%;
         padding-top: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
     }
 
     .contact-us {
         height: 40vh;
-        width: 25vw;
+        width: 250px;
         padding: 20px;
     }
 
