--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ main h4 {
 .hero {
     height: 400px;
     width: 100%;
-    background: url("../images/hero.jpg") no-repeat center/cover;
+    background: url("../images/hero.webp") no-repeat center/cover;
 }
 
 .hero-text {
@@ -178,7 +178,7 @@ main h4 {
 /*Contact page */
 
 .hero2 {
-    background: url("../images/hero.jpg") no-repeat center center/cover;
+    background: url("../images/hero.webp") no-repeat center center/cover;
     width: 100%;
     height: 100vh;
     display: flex;
